basic set up in place, error handling required

--- a/views/error.pug
+++ b/views/error.pug
@@ -1,4 +1,10 @@
 extends layout.pug
 
 block content 
-  h1 test error
+  head
+    title Page Not Found
+    link(rel='stylesheet', href='/static/stylesheets/style.css')
+  body
+    h1= message
+    p= status
+    pre #{error.stack}
