--- a/views/index.pug
+++ b/views/index.pug
@@ -1,22 +1,26 @@
 extends layout.pug
 
-block content 
-  h1 Books
-    p
-      a.button(href='new_book.html') Create New Book
-    table
-      thead
-        tr
-          th Title
-          th Author
-          th Genre
-          th Year
-      tbody
-      each book in books
-        tr
-          td
-           a(href='book_detail.html') 
-            =book.title
-          td= book.author
-          td= book.genre
-          td= book.year
+block content
+  head
+      title Books
+      link(rel='stylesheet' ,href='/static/stylesheets/style.css')
+  body 
+    h1 Welcome to Lulworth Library
+      p
+        a.button(href='/books/new') Create New Book
+      table
+        thead
+          tr
+            th Title
+            th Author
+            th Genre
+            th Year
+        tbody
+        each book in books
+          tr
+            td
+              a(href=`/books/${book.id}`) 
+                =book.title
+            td= book.author
+            td= book.genre
+            td= book.year
