--- a/views/new-book.pug
+++ b/views/new-book.pug
@@ -1,4 +1,25 @@
 extends layout.pug
 
 block content 
-  h1 test new book
+  head
+    title New Book
+    link(rel='stylesheet', href='/static/stylesheets/style.css')
+  body
+    h1 New Book
+    form(action=`/books/new`, method="post")
+      p
+        label(for='title') Title
+        input(name='title', type='text')
+      p
+        label(for='author') Author
+        input(name='author', type='text')
+      p
+        label(for='genre') Genre
+        input(name='genre', type='text')
+      p
+        label(for='year') Year
+        input(name='year', type='text')
+      p
+        input(type='submit', value='Create New Book')
+      p
+        a.button(href='/books') Cancel
