--- a/views/update-book.pug
+++ b/views/update-book.pug
@@ -1,4 +1,28 @@
 extends layout.pug
 
 block content 
-  h1 test update
+  head
+    title= books.title
+    link(rel='stylesheet', href='/static/stylesheets/style.css')
+  body
+    h1 Update Book
+    form(action=`/books/${books.id}`, method="post")
+      p
+        label(for='title') Title
+        input(name='title', type='text', value=`${books.title}`)
+      p
+        label(for='author') Author
+        input(name='author', type='text', value=`${books.author}`)
+      p
+        label(for='genre') Genre
+        input(name='genre', type='text', value=`${books.genre}`)
+      p
+        label(for='year') Year
+        input(name='year', type='text', value=`${books.year}`)
+      p
+        input(type='submit', value='Update Book')
+    form(method='post', action=`/books/${books.id}/delete`, onsubmit="return confirm('Do you really want to delete this book?');")
+      p
+        a.button(href='/books') Cancel
+      p
+        input(type='submit', value='Delete Book')
