--- a/views/error.pug
+++ b/views/error.pug
@@ -6,7 +6,7 @@ block content
     link(rel='stylesheet', href='/static/stylesheets/style.css')
   body
     p
-      a.button(href='/books') Home
+      a.button(href='/') Home
     h1= err.message
     h2= err.status + " error"
     pre #{err.stack}
