--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -103,3 +103,16 @@ ul.pages li {
   display: inline-block;
   margin-right: 5px;
 }
+
+div.search input[type="submit"] {
+  margin-left: 20px;
+}
+
+div.search input[type="text"] {
+  margin-left: 0px;
+}
+
+div.search a.button {
+  margin-left: 20px;
+  background-color: red;
+}
