--- a/views/new-book.pug
+++ b/views/new-book.pug
@@ -6,19 +6,24 @@ block content
     link(rel='stylesheet', href='/static/stylesheets/style.css')
   body
     h1 New Book
-    form(action=`/books/new`, method="post")
+    if errors
+      h2.error Oooops!
+          ul.error
+          each error in errors
+            li= error.message
+    form(action=`/books/new`, method="post")  
       p
         label(for='title') Title
-        input(name='title', type='text')
+        input(name='title', type='text' id='title')
       p
         label(for='author') Author
-        input(name='author', type='text')
+        input(name='author', type='text' id='author')
       p
         label(for='genre') Genre
-        input(name='genre', type='text')
+        input(name='genre', type='text',id='genre')
       p
         label(for='year') Year
-        input(name='year', type='text')
+        input(name='year', type='text' id='year')
       p
         input(type='submit', value='Create New Book')
       p
