--- a/views/empty-search.pug
+++ b/views/empty-search.pug
@@ -4,7 +4,7 @@ block content
   head
       title Boo
       link(rel='stylesheet' ,href='/static/stylesheets/style.css')
-  body 
+  body.nothing 
     h1 Search results for 
       - var n = 1;
       - var query = "cheese";
