--- a/views/error.pug
+++ b/views/error.pug
@@ -4,7 +4,7 @@ block content
   head
     title Page Not Found
     link(rel='stylesheet', href='/static/stylesheets/style.css')
-  body
+  body.nothing
     p
       a.button(href='/') Home
     h1= err.message
