--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ block content
   head
       title Books
       link(rel='stylesheet' ,href='/static/stylesheets/style.css')
-  body 
+  body.index
     h1 Welcome to Lulworth Library
       - var n = 1;
       - var query = "cheese";
