--- a/views/new-book.pug
+++ b/views/new-book.pug
@@ -4,7 +4,7 @@ block content
   head
     title New Book
     link(rel='stylesheet', href='/static/stylesheets/style.css')
-  body
+  body.search
     h1 New Book
     if errors
       h2.error Oooops!
