--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Russo+One&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap");
+
 body {
   padding: 10px 50px 50px;
-  font: 18px "Garamond", serif;
+  font: 12px "Garamond", serif;
+}
+
+h1 {
+  font-family: "Cormorant Garamond", serif;
 }
 
 a {
-  color: #019875;
+  color: #016198;
   text-decoration: none;
   font-weight: bold;
   transition: 0.4s;
@@ -17,8 +25,8 @@ a:hover {
 a.button,
 input[type="submit"] {
   color: white;
-  background: #019875;
-  font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
+  background: #016198;
+  font-family: "Cormorant Garamond", serif;
   padding: 10px 14px 12px;
   font-size: 14px;
   border-radius: 2px;
@@ -37,11 +45,13 @@ input[type="submit"] {
 
 a.button:hover,
 input[type="submit"]:hover {
-  background-color: #01b189;
+  background-color: #57a2d4;
 }
 
 p {
   margin: 20px auto;
+  font-size: 20px;
+  font-family: "Cormorant Garamond", serif;
 }
 
 ul {
@@ -56,14 +66,22 @@ h2 {
   padding-top: 20px;
 }
 
+table {
+  margin-top: 15px;
+  font-family: "Cormorant Garamond", serif;
+}
+
 th {
-  border-bottom: 2px solid #d8b493;
+  border-bottom: 2px solid #016198;
   text-align: left;
-  padding: 5px 20px 5px 10px;
+  padding: 10px 20px 5px 10px;
+
+  background: #e7e7e7;
 }
 
 tr {
   min-height: 50px;
+  background: rgb(179, 178, 184);
 }
 
 tr:nth-child(2n) {
@@ -115,4 +133,28 @@ div.search input[type="text"] {
 div.search a.button {
   margin-left: 20px;
   background-color: red;
+}
+
+body.index {
+  background-image: url("/static/images/stack2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: auto;
+  padding-bottom: 200px;
+}
+
+body.search {
+  background-image: url("/static/images/stack2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+  padding-bottom: 350px;
+}
+
+body.nothing {
+  background-image: url("/static/images/nothing.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+  padding-bottom: 600px;
 }
