--- a/views/search.pug
+++ b/views/search.pug
@@ -4,7 +4,7 @@ block content
   head
       title Books
       link(rel='stylesheet' ,href='/static/stylesheets/style.css')
-  body 
+  body.search 
     h1 Search results for #{searchquery}
       - var n = 1;
       - var query = "cheese";
