--- a/views/update-book.pug
+++ b/views/update-book.pug
@@ -4,7 +4,7 @@ block content
   head
     title= books.title
     link(rel='stylesheet', href='/static/stylesheets/style.css')
-  body
+  body.search
     h1 Update Book
     if errors
       h2.error Oooops!
