--- a/views/empty-search.pug
+++ b/views/empty-search.pug
@@ -5,7 +5,7 @@ block content
       title Boo
       link(rel='stylesheet' ,href='/static/stylesheets/style.css')
   body.nothing 
-    h1 Search results for 
+    h1 Search results for #{searchquery}
       - var n = 1;
       - var query = "cheese";
       div.search
