--- a/views/empty-search.pug
+++ b/views/empty-search.pug
@@ -4,6 +4,7 @@ block content
   head
       title Boo
       link(rel='stylesheet' ,href='/static/stylesheets/style.css')
+      meta(name="viewport",content="width=device-width, initial-scale=1.0")
   body.nothing 
     h1 Search results for #{searchquery}
       - var n = 1;
