--- a/views/new-book.pug
+++ b/views/new-book.pug
@@ -4,6 +4,7 @@ block content
   head
     title New Book
     link(rel='stylesheet', href='/static/stylesheets/style.css')
+    meta(name="viewport",content="width=device-width, initial-scale=1.0")
   body.search
     h1 New Book
     if errors
