--- a/views/page-not-found.pug
+++ b/views/page-not-found.pug
@@ -4,7 +4,8 @@ block content
   head
     title Page Not Found
     link(rel='stylesheet', href='/static/stylesheets/style.css')
-  body
+    meta(name="viewport",content="width=device-width, initial-scale=1.0")
+  body.nothing
     h1 Page Not Found
     p Sorry! We couldn't find the page you were looking for.
     br
