--- a/views/search.pug
+++ b/views/search.pug
@@ -4,6 +4,7 @@ block content
   head
       title Books
       link(rel='stylesheet' ,href='/static/stylesheets/style.css')
+      meta(name="viewport",content="width=device-width, initial-scale=1.0")
   body.search 
     h1 Search results for #{searchquery}
       - var n = 1;
