--- a/views/update-book.pug
+++ b/views/update-book.pug
@@ -4,6 +4,7 @@ block content
   head
     title= books.title
     link(rel='stylesheet', href='/static/stylesheets/style.css')
+    meta(name="viewport",content="width=device-width, initial-scale=1.0")
   body.search
     h1 Update Book
     if errors
