--- a/views/error.pug
+++ b/views/error.pug
@@ -4,6 +4,7 @@ block content
   head
     title Page Not Found
     link(rel='stylesheet', href='/static/stylesheets/style.css')
+    meta(name="viewport",content="width=device-width, initial-scale=0.7")
   body.nothing
     p
       a.button(href='/') Home
