--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -158,3 +158,16 @@ body.nothing {
   height: 100%;
   padding-bottom: 600px;
 }
+
+/* Portrait */
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
+  body.index {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  div.search input[type="text"] {
+    margin-left: 0px;
+    width: 200px;
+  }
+}
