--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -166,6 +166,15 @@ body.nothing {
     padding-right: 0px;
   }
 
+  body.search {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  body.nothing {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
   div.search input[type="text"] {
     margin-left: 0px;
     width: 200px;
