--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -194,6 +194,8 @@ body.nothing {
   }
 
   div.search a.button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
     margin-left: 20px;
     background-color: red;
   }
