--- a/views/search.pug
+++ b/views/search.pug
@@ -5,7 +5,7 @@ block content
       title Books
       link(rel='stylesheet' ,href='/static/stylesheets/style.css')
       meta(name="viewport",content="width=device-width, initial-scale=0.7")
-  body.search 
+  body.index 
     h1 Search results for #{searchquery}
       div.search
         form(method="get" action=`/books/page/1`)
