--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,6 +12,8 @@ h1 {
 }
 
 a {
+  -webkit-appearance: none;
+  -moz-appearance: none;
   color: #016198;
   text-decoration: none;
   font-weight: bold;
@@ -19,6 +21,8 @@ a {
 }
 
 a:hover {
+  -webkit-appearance: none;
+  -moz-appearance: none;
   color: black;
 }
 
